tests/requests/snapshots/can_auth_with_api_key_and_regenerate@auth_request.snap
---
source: tests/requests/auth.rs
assertion_line: 571
expression: "(success_response.status_code(), success_response.text())"
---
(
    200,
    "{\"pid\":\"PID\",\"name\":\"loco\",\"email\":\"test@loco.com\",\"role\":\"admin\",\"api_key\":\"lo-PID\"}",
)
