tests/requests/snapshots/can_change_password@auth_request.snap
---
source: tests/requests/auth.rs
assertion_line: 661
expression: "(response.status_code(), response.text())"
---
(
    200,
    "null",
)
