tests/requests/snapshots/can_register@auth_request.snap
---
source: tests/requests/auth.rs
assertion_line: 44
expression: saved_user
---
Ok(
    Model {
        created_at: DATE,
        updated_at: DATE,
        id: ID
        pid: PID,
        email: "test@loco.com",
        password: "PASSWORD",
        api_key: "lo-PID",
        name: "loco",
        reset_token: None,
        reset_sent_at: None,
        email_verification_token: Some(
            "PID",
        ),
        email_verification_sent_at: Some(
            DATE,
        ),
        email_verified_at: None,
        magic_link_token: None,
        magic_link_expiration: None,
        role: "admin",
        quota_chat_invocations: 10000,
        quota_file_uploads: 10000,
        usage_chat_invocations: 0,
        usage_file_uploads: 0,
    },
)
