tests/requests/snapshots/login_with_valid_password@auth_request.snap
---
source: tests/requests/auth.rs
assertion_line: 118
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"token\":\"TOKEN\",\"pid\":\"PID\",\"name\":\"loco\",\"is_verified\":true,\"role\":\"admin\"}",
)
